// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  class="sc-AxjAm bscTDp"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;

exports[`matches snapshot with badge 1`] = `
<div
  class="sc-AxjAm WMKBB"
  data-testid="icon-Battery"
>
  <test-file-stub
    image="test-file-stub"
  />
</div>
`;
